changed the identation between sections using padding, fixed gap between hero__order-links

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -43,7 +43,7 @@ body {
 }
 
 .section-global {
-	margin-bottom: 120px;
+	padding: 60px 0;
 }
 
 .global-transition {
