--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -130,6 +130,7 @@
 }
 
 .hero {
+	padding-bottom: 60px;
 	&__content {
 		@extend %flex-sb;
 	}
@@ -166,7 +167,10 @@
 		letter-spacing: 0.03em;
 		font-size: 18px;
 		line-height: 1.3;
-		margin-right: 25px;
+
+		&:not(:last-child) {
+			margin-right: 20px;
+		}
 	}
 
 	&__info-link {
